# ComfyUI_AOG

./: README.ko.md  README.md  __init__.py  _tmp_run_full_api.py  comfy_nodes.py  debug_ace_sfx_history.json  debug_full_history.json  install_dependencies.ps1  install_dependencies.sh  main.py  pyproject.toml  requirements.txt  run_aog_audio_pipeline.py
.claude/: settings.local.json
aog/: __init__.py  cli.py  helpers.py  llm.py  nodes.py
aog/config/: __init__.py  loader.py  schema.py
aog/local_runtime/: __init__.py  ace_runtime.py  bootstrap.py  image_audio.py  media.py  paths.py  renderer.py  wan_runtime.py
aog/nodes/: __init__.py  asset_validation.py  base.py  execution_plan.py  extension_source.py  model_bundles.py  music_plan.py  output_plan.py  runtime_validation.py  shot_plan.py
aog/pipeline/: __init__.py  runner.py
debug/: authoring_verify_history.json  last_api_history.json  last_api_history_v2.json  runtime_verify_latest.json  runtime_verify_layout_latest.json
docs/: ARCHITECTURE.md  CLI_FIRST_ARCHITECTURE.md  CODE_STYLE.md  COMFYUI_FIRST_ARCHITECTURE.md  ENVIRONMENT_AND_EXPERIMENT_RUNBOOK.md  ENVIRONMENT_SYNC.md  EXPERIMENT_SETUP.md  OPENING_IMPLEMENTATION_HYPOTHESIS.md  PROJECT_PLAN.md  styleguide.md
docs/cookbook/: INDEX.md  INPUT_OUTPUT_CONTRACTS.md  NODE_REFERENCE.md  (+3 more)
examples/: project.music_first.yaml  project.test_custom_t2.yaml  project.test_custom_t3.yaml  project.test_lastframe.yaml  project.video_first.yaml
workflows/: AOG_ACE_Music_Only.json  AOG_Full_Music_SFX_Mux.json  AOG_MMAudio_SFX_Only.json  AOG_QwenVL_Authoring.json
(+74 files in other folders)
